--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,16 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# venv
+/cong-env
+
+# config files
+config.ini
+
+# pickle files
+*.p
+
+# db files
+*.db
+*.db-journal
